node label overflow fixed, custom widget added for js and yaml. partial js support added

--- a/src/components/diagram-editor/styles/node.css
+++ b/src/components/diagram-editor/styles/node.css
@@ -77,7 +77,7 @@
 #builder-page .node-labels>div {
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
     gap: 4px;
 }
 
@@ -101,7 +101,6 @@
     color: #082032;
     text-overflow: ellipsis;
     overflow: hidden;
-    white-space: nowrap;
 }
 
 
